--- a/locales/en.yml
+++ b/locales/en.yml
@@ -10,6 +10,7 @@ layout:
   logout: Logout
   register: Register
   profile: Profile
+
 about:
   google-and-microsoft: Everyone loves the&nbsp;<a target="_blank" href="http://code.google.com/apis/libraries/devguide.html">Google CDN</a>&nbsp;right? Even&nbsp;<a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
   the-promblem: The problem is, they only host the most popular libraries.
@@ -32,3 +33,9 @@ about:
   plugins: Plugins
   chat: *chat
   members: Members
+
+home:
+  search-for: Search for a library
+  realtime-search: Realtime search by
+  library: Library
+  link: Link
