--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -87,3 +87,8 @@ profile:
   favorites: お気に入り
   library: ライブラリ
   link: リンク
+
+members:
+  title: メンバーズ - ベータ版
+  community-members-and-growing: 人のコミュニティメンバーがいます
+  user: ユーザ
