--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -20,7 +20,7 @@ about:
   creators: クリエイター
   maintainers: メンテナー
   sponsors: スポンサー
-  cloudflare-description: CloudFlare はオープンソース、CDNJS のようなコミュニティ主導のプロジェクトはインターネットの未来が構築される際のツールであると信じています。CloudFlare は未来を助けるグローバルな CDN のインフラを提供することを誇りに思います。
+  cloudflare-description: CloudFlare はCDNJS のようなオープンソースでコミュニティ主導のプロジェクトがインターネットの未来を構築するツールであると信じています。その未来を支えるであろうグローバルな CDN を提供できることを、私たちは誇りに思います。
   userapp-description: &userapp-description 私たちのシステムは UserApp の支援を受けています。UserApp は、ユーザ管理機能を提供しておりこれによりより高速な開発、高速な収入、より多くのユーザ、そしてあなたのユーザにより良いサービスを提供します。
   algolia-description: Algolia はデベロッパーフレンドリーなデータベース検索の SaaS API を提供しています。これはどんなウェブサイトやモバイルアプリケーションでも簡単にインスタントで関連性の高い検索を可能にします。Algolia 独自の検索により、ユーザはほんの数回のキー入力で探しているものを見つけることができます。
   media: メディア
