catch up changes

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -16,7 +16,7 @@ about:
   the-promblem: The problem is, they only host the most popular libraries.
   we-host-it-all: We host it all - JavaScript, CSS, SWF, images, etc!
   supports-http-https-spdy: Supports http/https/spdy, we encourage always using <strong>https</strong>!
-  currently-used-by: Currently used by ~320,000 websites worldwide(~500,000 in total), <a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
+  currently-used-by: Currently used by ~520,000 websites worldwide, <a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
   creators: Creators
   maintainers: Maintainers
   sponsors: Sponsors
